--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -10,27 +10,47 @@ button {
     box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(233, 245, 71, 0.8) -6px -2px 16px 0px;
     color: cornflowerblue;
     position: absolute;
-    bottom: 60px;
-    margin-left: 600px;
+    bottom: 70px;
+    margin-left: 850px;    
 }
-
 .poks {
     cursor: pointer;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 25vh;
+    height: 23vh;
     overflow: scroll;
+    scroll-behavior: smooth;
     box-shadow: rgba(32, 32, 196, 0.25) 0px 50px 100px -20px, rgba(59, 44, 224, 0.3) 0px 30px 60px -30px, rgba(200, 221, 36, 0.35) 0px -2px 6px 0px inset;
 }
 
 .prev {
-    right: 450px;
+    right: 550px;
 }
-
+.search{
+    bottom: 130px;
+    right: 320px;
+}
+#search{   
+    position: absolute;
+    bottom: 130px;
+    right: 450px;
+    height: 30px;
+    background-color: rgb(245, 234, 33);
+    border: none;  
+    border-radius: 5px; 
+    padding: 20px;
+    color: cornflowerblue;
+}
+input::placeholder {
+    color: cornflowerblue;
+  }
+.search:hover ~ #search{
+    display: flex;
+}
 img {
-    width: 5rem;
+    width: 8rem;
 }
 
 ::-webkit-scrollbar {
