--- a/src/components/PokeInfo/PokeInfo.css
+++ b/src/components/PokeInfo/PokeInfo.css
@@ -4,9 +4,8 @@
     align-items: center;
     background-image: linear-gradient(to right, aqua, red);
     width: 100%;
-    height: 400vh;
-    gap: 6px;
-    padding: 30px;
+    height: 500vh;
+    gap: 5px;     
 }
 h1{
      font-family: "Pokemon";
@@ -16,14 +15,14 @@ h1{
      font-size: 5rem;    
 }
 .button{
-   right: 930px;
-   top: 60px;
+   right: 78rem;
+   top: 70px;
 }
 .button1{
     right: 240px;
 }
 .button2{
-    right: 930px;
+    right: 78rem;
 }
 .left-info, .right-info, .center-info{
     display: flex;
@@ -32,9 +31,12 @@ h1{
 }
 .right-info{
     padding-left: 40px;
+    overflow-y: scroll;
+    height: 15%;
+    width: 40%;    
 }
 .right-info h2{
-    margin-top: 40px;
+    margin-top: 40px;    
 }
 .left-info{
     align-items: flex-start;
