--- a/src/ui/components/PokeCard/PokeCard.css
+++ b/src/ui/components/PokeCard/PokeCard.css
@@ -1,27 +1,128 @@
 .button{
-   right: 78rem;
-   top: 75px;
+right: 78rem;
+top: 75px;
+z-index: 50;
 }
 .button1{
-    right: 240px;
+  right: 240px;
+  z-index: 50;
 }
 .button2{
-    right: 78rem;
+  right: 78rem;
+  z-index: 50;
 }
 .left-info, .right-info, .center-info{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .right-info{
-    padding-left: 40px;
-    overflow-y: scroll;
-    height: 15%;
-    width: 40%;    
+  padding-left: 40px;
+  overflow-y: scroll;
+  height: 15%;
+  width: 40%;   
 }
 .right-info h2{
-    margin-top: 40px;    
+  margin-top: 40px;    
 }
 .left-info{
-    align-items: flex-start;
+  align-items: flex-start;
+}
+
+@media (max-width: 1600px){
+  .button{
+  right: 46rem;
+  top: 95px;
+}
+
+.button2{
+  right: 46rem;
+}
+
+.right-info{   
+  width: 40%;    
+}
+.right-info h2{
+  margin-top: 40px;    
+}
+.left-info{
+  align-items: flex-start;
+  margin-left: 15px;
+}
+}
+
+@media (max-width: 950px){
+  .button{
+  right: 26rem;
+  top: 125px;
+}
+.button1{
+  right: 8rem;
+  bottom: 100px;
+}
+.button2{  
+  right: 26rem;
+  bottom: 100px;
+}
+.right-info{   
+  width: 40%;
+  position: absolute;
+  right: 50px;
+  top: 80px;
+  height: 50%;
+  z-index: 1;  
+}
+
+.left-info{
+  align-items: flex-start;
+  position: absolute;
+  left: 70px;
+  top: 550px;
+}
+.right-info h2{
+  margin-top: 40px;    
+}
+}
+
+@media (max-width: 530px){
+  .button{
+  right: 14rem;
+  top: 80px;
+}
+.button1{
+  right: 2rem;
+  position: fixed;
+  bottom: 10px;
+}
+.button2{  
+  right: 16rem;
+  position: fixed;
+  bottom: 10px;
+}
+.right-info{   
+  width: 50%; 
+  right: 10px;
+  top: 10px;
+  height: 50%;
+  z-index: 1;
+
+}
+.right-info li{
+  opacity: .6;
+}
+.right-info li:hover{
+  opacity: 1;
+}
+.left-info{
+  align-items: flex-start;
+  position: absolute;
+  left: 10px;
+  top: 500px;
+}
+.left-info li{
+  opacity: .6;
+}
+.right-info h2{
+  margin-top: 40px;    
+}
 }
