--- a/src/ui/components/PokeList/PokeList.css
+++ b/src/ui/components/PokeList/PokeList.css
@@ -1,88 +1,152 @@
 button {  
-    align-self: center;
-    font-family: sans-serif;
-    font-size: 14px;
-    justify-self: center;
-    background-color: rgb(245, 234, 33);
-    border-radius: 10px;
-    width: 110px;
-    height: 40px;
-    cursor: pointer;
-    border: none;
-    box-shadow: rgba(204, 214, 223, 0.15) 6px 2px 16px 0px, rgba(233, 245, 71, 0.8) -6px -2px 16px 0px;
-    color: cornflowerblue;
-    position: absolute;
-    bottom: 90px;
-    margin-left: 900px; 
-    font-weight: bold;     
+align-self: center;
+font-family: sans-serif;
+font-size: 14px;
+justify-self: center;
+background-color: rgb(245, 234, 33);
+border-radius: 10px;
+width: 110px;
+height: 40px;
+cursor: pointer;
+border: none;
+box-shadow: rgba(204, 214, 223, 0.15) 6px 2px 16px 0px, rgba(233, 245, 71, 0.8) -6px -2px 16px 0px;
+color: cornflowerblue;
+position: absolute;
+bottom: 90px;
+margin-left: 900px; 
+font-weight: bold;     
 }
 .loading{
-    display: flex;
-    height: 100vh;
-    width: 100%;
-    justify-content: center;
-    align-items: center;    
+display: flex;
+height: 100vh;
+width: 100%;
+justify-content: center;
+align-items: center;    
 }
 h1{
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: cornflowerblue;
-    color: rgb(247, 197, 7);
-    text-align: center;
+-webkit-text-stroke-width: 1px;
+-webkit-text-stroke-color: cornflowerblue;
+color: rgb(247, 197, 7);
+text-align: center;
 }
 .poks {
-    cursor: pointer;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 23vh;
-    overflow: scroll;
-    scroll-behavior: smooth;
-    box-shadow: rgba(32, 32, 196, 0.25) 0px 50px 100px -20px, rgba(59, 44, 224, 0.3) 0px 30px 60px -30px, rgba(200, 221, 36, 0.35) 0px -2px 6px 0px inset;
-    transition: ease-in .1s;
+cursor: pointer;
+position: relative;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+height: 23vh;
+overflow: scroll;
+scroll-behavior: smooth;
+box-shadow: rgba(32, 32, 196, 0.25) 0px 50px 100px -20px, rgba(59, 44, 224, 0.3) 0px 30px 60px -30px, rgba(200, 221, 36, 0.35) 0px -2px 6px 0px inset;
+transition: ease-in .5s;
 }
-.poks:hover{
-    border-color: rgb(245, 234, 33);
-    transform: scale(115%);
-    border-radius: 50%;
-}
-.pokes:active{
-    background-color: aqua;
-}
-
 img {
-    width: 8rem;
+width: 8rem;
+transition: ease-in .2s;
+}
+.poks:hover img{
+z-index: 50;
+transform: scale(170%);
 }
 
 ::-webkit-scrollbar {
-    width: 0px;
-    height: 0px;
+width: 0px;
+height: 0px;
 }
 
 H2 {
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: cornflowerblue;
-    color: rgb(247, 197, 7);
+-webkit-text-stroke-width: 1px;
+-webkit-text-stroke-color: cornflowerblue;
+color: rgb(247, 197, 7);
 }
-.arrow{
-    align-self: center;       
-    justify-self: center;   
-    width: 110px;
-    height: 40px;
-    cursor: pointer;   
-    position: absolute;
-    bottom: 400px;
-    right: 12rem;       
+
+.arrow {
+align-self: center;
+justify-self: center;
+width: 110px;
+height: 40px;
+cursor: pointer;
+position: absolute;
+bottom: 400px;
+right: 12rem;
+animation: blink 1s infinite;
 }
-.arrow img{
-    opacity: .1;
-    width: 60%;
+
+@keyframes blink {
+0% {
+opacity: 0.1;
 }
-.arrow img:hover{
-    opacity: 100%;
+50% {
+opacity: 1;
 }
+100% {
+opacity: 0.1;
+}
+}
+
+.arrow img {
+width: 60%;
+}
+
+.arrow:hover {
+opacity: 0.9;
+animation: none;
+}
+
 .previous{
-    left: 12rem;
-    transform: rotatey(180deg);
+left: 12rem;
+transform: rotatey(180deg);
+}
+
+@media (max-width: 1600px){
+.arrow{        
+right: 8rem;       
+}    
+.previous{
+left: 8rem;
+}
+}
+
+@media (max-width: 950px){
+.arrow{        
+right: 4rem;       
+}    
+.previous{
+left: 4rem;
+}
+}
+
+@media (max-width: 530px){
+button {        
+width: 90px;
+height: 30px;        
+}
+
+.loading{
+display: flex;
+height: 100vh;
+width: 100%;
+justify-content: center;
+align-items: center;    
+}       
+.poks {
+height: 20vh;
+}
+img {
+width: 4rem;
+transition: ease-in .2s;
+}
+.arrow {        
+width: 90px;    
+}
+.arrow{ 
+  top: 50%;
+  position: fixed;       
+  right: 0rem;       
+  }    
+  .previous{
+  left: 0rem;
+  }
 }
