--- a/src/ui/components/SearchButton/SearchButton.css
+++ b/src/ui/components/SearchButton/SearchButton.css
@@ -18,7 +18,60 @@
 }
 input::placeholder {
     color: cornflowerblue;
-  }
+}
 .search:hover ~ #search{
     display: flex;
+}
+
+@media (max-width: 1600px){
+  .search{
+    bottom: 70px;
+    right: 180px;
+}
+#search{
+  bottom: 71px;
+  right: 295px;
+  height: 30px;
+}
+#search:focus{
+    opacity: 100%;
+}
+.search:hover ~ #search{
+    display: flex;
+} 
+}
+
+@media (max-width: 950px){
+  .search{
+    bottom: 100px;
+    right: 150px;
+}
+#search{   
+    position: absolute;
+    width: 200px;
+    bottom: 150px;
+    right: 100px;
+    height: 30px;    
+    border: none;  
+    border-radius: 5px; 
+    padding: 20px;
+    color: cornflowerblue;
+    opacity: .7;
+}
+}
+
+@media (max-width: 550px){
+  .search{
+    bottom: 10px;
+    right: 10px;    
+    position: fixed;
+}
+#search{   
+  position: fixed;
+  width: 190px;
+  bottom: 10px;
+  right: 110px;
+  height: 10px;  
+  opacity: .6;
+}
 }
